--- a/p1/css/main.css
+++ b/p1/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(193,148,83);
+  background-color: rgb(207, 145, 78, 1);
   text-align:center;
   margin-top: 300px
 }
