--- a/e12/css/main.css
+++ b/e12/css/main.css
@@ -1,6 +1,11 @@
 *{
   box-sizing: : border-box;
 }
+main{
+  display: flow-root;;
+  margin: 0 auto;
+  width: 60vw;
+}
 body{
   margin: 0;
   background-color: rgb(247,255,242);
@@ -14,14 +19,21 @@ body{
   background-color: rgb(205,230,190);
   padding: 20px;
 }
+img{
+  float: left;
+  height: 700px;
+}
 h1{
-  margin: 0px;
-  font-family: "ITC Avant Garde Gothic";
+  margin: 100px;
+  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: rgb(79,120,72);
-  font-size:200px;
+  font-size:130px;
 }
 h3{
-  font-size: 100px;
+  font-size: 40px;
+  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: rgb(79,120,72);
 }
 p{
