--- a/e12/css/main.css
+++ b/e12/css/main.css
@@ -1,18 +1,14 @@
 *{
   box-sizing: : border-box;
 }
-main{
-  display: flow-root;;
-  margin: 0 auto;
-  width: 60vw;
-}
+
 body{
   margin: 0;
   background-color: rgb(247,255,242);
 }
 .sideright{
-  width: 900px;
-  height:5000px;
+  width: 800px;
+  height:3500px;
   position: relative;
   margin-top: 0px;
   margin-left: 700px;
@@ -24,19 +20,38 @@ img{
   height: 700px;
 }
 h1{
-  margin: 100px;
+  margin-top: 150px;
+  margin-left: 120px;
   font-family: 'Didact Gothic', sans-serif;
   font-family: 'Poppins', sans-serif;
   color: rgb(79,120,72);
-  font-size:130px;
+  font-size:140px;
+  line-height: 120pt;
+}
+h2{
+  margin: 0px;
+  margin-left: 120px;
+  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  color: rgb(79,120,72);
+  font-size:140px;
+  font-style: normal;
 }
 h3{
+  float: left;
+  margin-top: -100px;
   font-size: 40px;
+  margin-left: 120px;
   font-family: 'Didact Gothic', sans-serif;
   font-family: 'Poppins', sans-serif;
   color: rgb(79,120,72);
 }
+
 p{
-  margin: 300px;
+  text-indent:40px;
+  margin-top: 100px;
+  margin-left: 130px;
+  margin-right: 130px;
+  font-size: 21px;
   color: rgb(79,120,72);
 }
