--- a/p3a2/css/main.css
+++ b/p3a2/css/main.css
@@ -3,28 +3,28 @@
 }
 body{
   margin: 0;
-  background-color: rgb(247,255,242);
+  background-color: black;
 }
-.sideright{
-  width: 900px;
-  height:5000px;
+.button {
+  background-color: pink;
+  border: none;
+  color: white;
+  padding: 40px 70px;
+  text-align: center;
+  display: inline-block;
+  font-size: 40px;
+  margin: 4px 2px;
+  cursor: pointer;
   position: relative;
-  margin-top: 0px;
+  margin-top: 150px;
   margin-left: 700px;
-  background-color: rgb(205,230,190);
-  padding: 20px;
 }
 h1{
   margin: 0px;
   font-family: "ITC Avant Garde Gothic";
-  color: rgb(79,120,72);
-  font-size:200px;
-}
-h3{
-  font-size: 100px;
-  color: rgb(79,120,72);
-}
-p{
-  margin: 300px;
-  color: rgb(79,120,72);
+  color: purple;
+  font-size:100px;
+  position: relative;
+  margin-top: 200px;
+  margin-left: 100px;
 }
