--- a/p3a2/css/main.css
+++ b/p3a2/css/main.css
@@ -8,10 +8,13 @@ body{
 main{
   width: 50vw;
   margin: 0 auto;
-	padding: 150px 0 0 0;
+	padding: 10px;
 }
-image{
-  width:100%;
+img {
+    float: left;
+    width:  800px;
+    height: 500px;
+    object-fit: cover;
 }
 h1{
   padding: 50px;
@@ -23,10 +26,7 @@ h1{
   text-align: center;
 }
 .center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
